@@ -12,14 +12,17 @@ public class InfoPanel extends JPanel {
       
       monitor = new ConnectionMonitor();
       monitor.monitorConnectionManager(net.suberic.pooka.Pooka.getConnectionManager());
+
       this.add(monitor,java.awt.BorderLayout.EAST);
-
-	javax.swing.border.Border border = BorderFactory.createLoweredBevelBorder();
-
-	this.setBorder(border);
-	this.setMinimumSize(getPreferredSize());
+      
+      javax.swing.border.Border border = BorderFactory.createLoweredBevelBorder();
+      
+      this.setBorder(border);
+      this.getInsets().top=0;
+      this.getInsets().bottom=0;
+      this.setMinimumSize(getPreferredSize());
     }
-
+  
     public void setMessage(String newMessage) {
 	final String msg = newMessage;
 	Runnable runMe = new Runnable() {
