@@ -1,3 +1,12 @@
+made status area at bottom smaller.
+
+fixed a bug where the 3rd field was always opening an attachment menu even
+if there were no attachments.
+
+fixed save as draft so it actually works now.
+
+added a system tray icon for Pooka.
+
 050505 release
 --------------
 
